# luzfcb_dj_simplelock

./: .gitlab-ci.yml  .landscape.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  manage.py  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst
luzfcb_dj_simplelock/: apps.py  forms.py  models.py  utils.py  views.py
luzfcb_dj_simplelock/migrations/: 0001_initial.py
luzfcb_dj_simplelock/static/luzfcb_dj_simplelock/js/: jquery_csrftoken.js
luzfcb_dj_simplelock/templates/luzfcb_dj_simplelock/: base_template.html  dj_simplelock.html  pessoa_create.html  pessoa_detail.html  pessoa_list.html  pessoa_update.html
sample_project/: settings.py  urls.py  wsgi.py
sample_project/app_test/: app_test_urls.py  forms.py  models.py  views.py
sample_project/app_test/migrations/: 0001_initial.py
sample_project/app_test/templates/app_test/: base_template.html  person_create.html  person_detail.html  person_list.html  person_update.html
sample_project/test_settings/: settings.py  urls.py
tests/: test_models.py  test_view_with_live_browser.py  test_views.py  utils.py
