[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:luzfcb_dj_simplelock/__init__.py]

[wheel]
universal = 1

[pep8]
max_line_length =  119

[flake8]
exclude = build,.git,docs,migrations,.tox,requirements
# ignore = E123,E128,E402,E501,W503,E731,W601
max-line-length = 119
statistics = true
count = true
show-source = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = luzfcb_dj_simplelock
multi_line_output = 5
not_skip = __init__.py
skip = migrations, .tox

[metadata]
license-file = LICENSE
